# llm-engineering

./: .gitignore  README.md  pyproject.toml
projects/tokenization_embeddings/: README.md  __init__.py  bpe.py  bpe_visualizer.py  train_bpe.py  train_embedding.py  visualize_bpe.py  visualize_embeddings.py  word_categories.yaml
src/llm_engineering/: __init__.py
src/llm_engineering/core/: __init__.py  trackers.py
src/llm_engineering/embedding/: __init__.py  dataset.py  model.py  training.py
src/llm_engineering/tokenizer/: __init__.py  bpe.py
tests/: __init__.py
tests/integration/embedding/: __init__.py  test_dataset_model.py  test_model_training.py
tests/unit/embedding/: __init__.py  test_dataset.py
tests/unit/tokenizer/: __init__.py  test_bpe.py
