[project]
name = "llm-engineering"
version = "0.1.0"
description = "A collection of llm-engineering projects"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "Timur Çakmakoğlu", email = "timurcakmakoglu@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.13",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN201",  # require return type annotations
    "S101",  # prevent usage of assert
    "SLF001",  # private member access
    "PLR2004",  # magic value comparison
]
